cmake_minimum_required(VERSION 3.8)
project(object_msgs)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()
set(CMAKE_EXPORT_COMPILE_COMMANDS on)
# find dependencies
find_package(ament_cmake REQUIRED)
find_package(std_msgs REQUIRED)
find_package(rosidl_default_generators REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/Boat.msg"
  "msg/Boats.msg"
  "msg/Buoy.msg"
  "msg/Buoys.msg"
  DEPENDENCIES std_msgs
)
ament_export_dependencies(rosidl_default_runtime std_msgs)


ament_package()
